testdata/result/statement/!bad_from_query_limit.sql.txt
--- !bad_from_query_limit.sql
FROM t LIMIT 1
--- Error
syntax error: testdata/input/query/!bad_from_query_limit.sql:1:8: LIMIT not supported after FROM query; Consider using pipe operator `|> LIMIT` or parentheses around the FROM query.
  1|  FROM t LIMIT 1
   |         ^~~~~


--- AST
&ast.QueryStatement{
  Query: &ast.BadQueryExpr{
    BadNode: &ast.BadNode{
      NodeEnd: 14,
      Tokens:  []*token.Token{
        &token.Token{
          Kind: "FROM",
          Raw:  "FROM",
          End:  4,
        },
        &token.Token{
          Kind:     "<ident>",
          Space:    " ",
          Raw:      "t",
          AsString: "t",
          Pos:      5,
          End:      6,
        },
        &token.Token{
          Kind:  "LIMIT",
          Space: " ",
          Raw:   "LIMIT",
          Pos:   7,
          End:   12,
        },
        &token.Token{
          Kind:  "<int>",
          Space: " ",
          Raw:   "1",
          Base:  10,
          Pos:   13,
          End:   14,
        },
      },
    },
  },
}

--- SQL
FROM t LIMIT 1
